// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GDCTrack drawer widget renders gene with just the required model elements 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  data-testid="variant-side-drawer"
>
  <div
    class="MuiPaper-root makeStyles-paperRoot MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-expanded MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
      style="margin-top: 4px;"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="MuiButtonBase-root MuiExpansionPanelSummary-root MuiExpansionPanelSummary-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiExpansionPanelSummary-content MuiExpansionPanelSummary-expanded"
        >
          <span
            class="MuiTypography-root MuiTypography-button"
          >
             
            Primary data
          </span>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiExpansionPanelSummary-expanded MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-expandIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiExpansionPanelDetails-root makeStyles-expansionPanelDetails"
              >
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    Position
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    3:196596..409417 
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    Description
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    The protein encoded by this gene is a member of the L1 gene family of neural cell adhesion molecules. It is a neural recognition molecule that may be involved in signal transduction pathways. The deletion of one copy of this gene may be responsible for mental defects in patients with 3p- syndrome. This protein may also play a role in the growth of certain cancers. Alternate splicing results in both coding and non-coding variants. [provided by RefSeq, Nov 2011]
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    Name
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    cell adhesion molecule L1-like
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    Length
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    212822
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    Type
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    protein_coding
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-expanded MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
      style="margin-top: 4px;"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="MuiButtonBase-root MuiExpansionPanelSummary-root MuiExpansionPanelSummary-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiExpansionPanelSummary-content MuiExpansionPanelSummary-expanded"
        >
          <span
            class="MuiTypography-root MuiTypography-button"
          >
             
            Attributes
          </span>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiExpansionPanelSummary-expanded MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-expandIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiExpansionPanelDetails-root makeStyles-expansionPanelDetails"
              >
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    biotype
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    protein_coding
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    description
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    The protein encoded by this gene is a member of the L1 gene family of neural cell adhesion molecules. It is a neural recognition molecule that may be involved in signal transduction pathways. The deletion of one copy of this gene may be responsible for mental defects in patients with 3p- syndrome. This protein may also play a role in the growth of certain cancers. Alternate splicing results in both coding and non-coding variants. [provided by RefSeq, Nov 2011]
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    geneChromosome
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    3
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    geneEnd
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    409417
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    geneStart
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    196596
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    geneStrand
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    1
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    id
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    R2VuZTpFTlNHMDAwMDAxMzQxMjEjZTQ2MDk1NGM4MmZiMjczYjIwNTk1MDliODFkZTZmYjEj
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    isCancerGeneCensus
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    null
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    symbol
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    CHL1
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    synonyms
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldSubvalue MuiTypography-body1"
                  >
                    CALL
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldSubvalue MuiTypography-body1"
                  >
                    FLJ44930
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldSubvalue MuiTypography-body1"
                  >
                    L1CAM2
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldSubvalue MuiTypography-body1"
                  >
                    MGC132578
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root"
  />
  <hr
    class="MuiDivider-root"
  />
  <hr
    class="MuiDivider-root"
  />
</div>
`;

exports[`GDCTrack drawer widget renders mutation with just the required model elements 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  data-testid="variant-side-drawer"
>
  <div
    class="MuiPaper-root makeStyles-paperRoot MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-expanded MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
      style="margin-top: 4px;"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="MuiButtonBase-root MuiExpansionPanelSummary-root MuiExpansionPanelSummary-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiExpansionPanelSummary-content MuiExpansionPanelSummary-expanded"
        >
          <span
            class="MuiTypography-root MuiTypography-button"
          >
             
            Primary data
          </span>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiExpansionPanelSummary-expanded MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-expandIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiExpansionPanelDetails-root makeStyles-expansionPanelDetails"
              >
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    Position
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    chr3:377918..377918 
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    Length
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    1
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    Type
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    Simple Somatic Mutation
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-expanded MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
      style="margin-top: 4px;"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="MuiButtonBase-root MuiExpansionPanelSummary-root MuiExpansionPanelSummary-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiExpansionPanelSummary-content MuiExpansionPanelSummary-expanded"
        >
          <span
            class="MuiTypography-root MuiTypography-button"
          >
             
            Attributes
          </span>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiExpansionPanelSummary-expanded MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-expandIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiExpansionPanelDetails-root makeStyles-expansionPanelDetails"
              >
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    chromosome
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    chr3
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    endPosition
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    377918
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    genomicDnaChange
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    chr3:g.377918G&gt;A
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    mutationSubtype
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    Single base substitution
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    mutationType
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    Simple Somatic Mutation
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    ncbiBuild
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    GRCh38
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    referenceAllele
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    G
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    score
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    3
                  </p>
                </div>
                <div
                  style="display: flex;"
                >
                  <p
                    class="MuiTypography-root makeStyles-fieldName MuiTypography-body2"
                  >
                    startPosition
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-fieldValue MuiTypography-body1"
                  >
                    377918
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root"
  />
  <hr
    class="MuiDivider-root"
  />
  <hr
    class="MuiDivider-root"
  />
</div>
`;
